--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to my GitHub Pages website!\n Note that the inputs are too hot!  Note clipping!!</p>
+<p>Welcome to my GitHub Pages website!<br />  Note that the inputs are too hot! <br /> Note clipping!!</p>
 
 </body>
 </html>
